--- a/src/containers/home/HomePage.css
+++ b/src/containers/home/HomePage.css
@@ -53,14 +53,12 @@
 }
 
 .book-list {
-  margin: auto;
-  padding: 16px;
-  max-width: 700px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(max-content, 200px));
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(max-content, 240px));
   justify-content: center;
   grid-auto-rows: auto;
-  gap: 32px;
+  gap: 24px;
 }
 
 @media screen and (max-width: 450px) {
