--- a/src/containers/home/HomePage.css
+++ b/src/containers/home/HomePage.css
@@ -26,6 +26,7 @@
 .search-container {
   margin: auto;
   display: flex;
+  align-items: center;
   max-width: 400px;
   background-color: white;
   padding: 5px 10px;
@@ -36,6 +37,7 @@
   padding: 8px 16px;
   background-color: white;
   flex: 1;
+  width: 60%;
   font-size: 16px;
   outline: none;
   border: none;
@@ -65,4 +67,71 @@
   .hero-text {
     font-size: 45px;
   }
+}
+
+.select-container {
+  position: relative;
+  width: 40%;
+}
+
+.select-btn {
+  width: 100%;
+  text-align: left;
+  border: 1px solid rgb(209, 209, 209);
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: rgb(255, 255, 255);
+  cursor: pointer;
+  transition: all 0.2s ease;
+  display: flex;
+  justify-content: space-between;
+}
+
+.select-btn:hover {
+  background-color: 1px solid rgb(195, 195, 195);
+}
+
+.select-search {
+  padding: 8px;
+  background-color: white;
+  font-size: 13px;
+  outline: none;
+  border: 1px solid gray;
+  border-radius: 5px;
+  margin: 5px;
+}
+
+.options-container {
+  position: absolute;
+  top: 32px;
+  right: -8px;
+  z-index: 2;
+  background-color: white;
+  border-radius: 0 0 4px;
+  box-shadow: 0px 20px 47px -13px rgba(0, 0, 0, 0.41);
+  border-radius: 5px;
+  padding: 8px 0;
+}
+
+.options-list {
+  max-height: 150px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.options-list-item {
+  cursor: pointer;
+  border-bottom: 1px solid rgb(197, 197, 197);
+  transition: all 0.2s ease;
+  padding: 8px 16px;
+  font-size: 13px;
+}
+
+.options-list-item:hover {
+  cursor: pointer;
+  background-color: rgb(227, 227, 227);
+}
+
+.options-list-item.selected {
+  background-color: rgb(210, 209, 209);
 }
